@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2023,v 1.7811 2023/12/25 17:13:25 wiz Exp $
+$NetBSD: CHANGES-2023,v 1.7812 2023/12/25 18:11:40 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2023:
 
@@ -11114,3 +11114,4 @@ Changes to the packages collection and infrastructure in 2023:
 	Updated chat/gajim to 1.3.3nb9 [wiz 2023-12-25]
 	Updated sysutils/zabbix-frontend to 4.0.49nb2 [wiz 2023-12-25]
 	Updated multimedia/libtheora-docs to 1.1.1nb8 [wiz 2023-12-25]
+	Removed editors/p5-Padre-Plugin-SpellCheck [wiz 2023-12-25]
